--- a/App/www/css/luckytheme.css
+++ b/App/www/css/luckytheme.css
@@ -220,7 +220,7 @@ html .ui-alt-icon .ui-radio-off:after {
 html .ui-bar-a .ui-bar-inherit,
 html .ui-body-a .ui-bar-inherit,
 html body .ui-group-theme-a .ui-bar-inherit {
-	background-color: #2196F3 /*{a-bar-background-color}*/;
+	background-color: #1976D2 /*{a-bar-background-color}*/;
 	border-color: #BDBDBD /*{a-bar-border}*/;
 	color: #FFFFFF /*{a-bar-color}*/;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ 0px /*{a-bar-shadow-y}*/ 0 /*{a-bar-shadow-radius}*/ #eeeeee /*{a-bar-shadow-color}*/;
